fix horizontal scroll

--- a/src/sass/parts/_service-box.scss
+++ b/src/sass/parts/_service-box.scss
@@ -17,6 +17,10 @@
     line-height: 0.8;
     margin: 0;
     padding: 0 6rem;
+
+    @media screen and (max-width: 767px) {
+      padding: 0 2rem;
+    }
   }
 
   &--description{
